# csv_to_sql_dump

./: README.md  dogs.csv  dump.sql  pyproject.toml  test.py
src/csv_to_sql_dump/: __init__.py
